[gd_scene format=3 uid="uid://ca2dk6w1anoii"]

[ext_resource type="Script" uid="uid://ckps7bv6qrj7d" path="res://scenes/char/enemy.gd" id="1_cgdn4"]
[ext_resource type="Texture2D" uid="uid://cp1vw7g68g7d8" path="res://assets/graphics/characters/roguelikeChar_transparent.png" id="2_cf675"]
[ext_resource type="Texture2D" uid="uid://v0xgld7q1r7k" path="res://assets/graphics/characters/warning.png" id="3_bec6a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gsdjt"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cgdn4"]
radius = 46.0

[node name="Enemy" type="CharacterBody2D" unique_id=1621395168]
scale = Vector2(1.2, 1.2)
collision_layer = 0
collision_mask = 7
motion_mode = 1
script = ExtResource("1_cgdn4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1979045908]
shape = SubResource("CircleShape2D_gsdjt")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=263212809]
texture_filter = 1
texture = ExtResource("2_cf675")
region_enabled = true
region_rect = Rect2(0, 170, 16, 16)

[node name="Warning" type="Sprite2D" parent="." unique_id=810024750]
visible = false
texture_filter = 1
position = Vector2(0, -15.833333)
texture = ExtResource("3_bec6a")

[node name="Range" type="Area2D" parent="." unique_id=546994825]
visible = false
scale = Vector2(2.5, 2.5)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range" unique_id=1660066748]
shape = SubResource("CircleShape2D_cgdn4")

[node name="Attack Cooldown" type="Timer" parent="." unique_id=223839649]
wait_time = 0.6
one_shot = true
autostart = true

[node name="Damage Cooldown" type="Timer" parent="." unique_id=1181010924]
wait_time = 0.3
one_shot = true

[node name="Death Timer" type="Timer" parent="." unique_id=1248409810]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="Death Timer" to="." method="_on_revive"]
